Fixed z-indexes

--- a/MainPage/mainPage.css
+++ b/MainPage/mainPage.css
@@ -307,7 +307,7 @@ html {
     top: 8px;
     height: 20px;
     width: 20px;
-    z-index: 100;
+    z-index: 0;
 }
 
 .pluss1 {
@@ -340,13 +340,14 @@ html {
     grid-template-rows: 35px;
     grid-column-gap: 120px;
     grid-row-gap: 5px;
-    z-index: 100;
+    z-index: 0;
 }
 
 .uper {
+    z-index: 0;
+    position: relative;
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
     background-color: rgba(255, 255, 255, .20);
     backdrop-filter: blur(5px);
     text-align: center;
@@ -358,6 +359,7 @@ html {
 }
 
 .wrapper {
+    z-index: 0;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
